# nlp-shap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  api.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release_notes.html  search.html  searchindex.js
.cursor/rules/: connector-benchmarks.mdc  docs.mdc  examples.mdc  git-commits.mdc  minimal-diff.mdc  package-boundaries.mdc  performance.mdc  python-quality.mdc  tdd.mdc  uv-workflow.mdc
.cursor/skills/caveman/: SKILL.md
.cursor/skills/nlp-shap-development/: SKILL.md
.cursor/skills/nlp-shap-rewrite/: SKILL.md
.github/workflows/: benchmarks.yaml  deploy-docs.yaml  prek.yaml  publish.yaml  test.yaml
_modules/: index.html
_modules/nlp_shap/: _logging.html
_modules/nlp_shap/domain/: coalition.html  conversation.html  enums.html  estimands.html  game.html  generation.html  players.html
_modules/nlp_shap/estimation/: complementary.html  exact.html  monte_carlo.html  neyman.html  normalizers.html
_modules/nlp_shap/masking/: builder.html  codec.html  partitions.html  policies.html  prefix_tree.html  space.html
_modules/nlp_shap/pipeline/: config.html  manifest.html  orchestrator.html  result.html  runner.html
_modules/nlp_shap/plugins/: builtin.html  context.html  groups.html  registry.html
_modules/nlp_shap/protocols/: backend.html  embedding.html  estimand.html  estimator.html  masking.html  partition.html  renderer.html  value.html
_modules/nlp_shap/runtime/: archive.html  dedup.html  kv_cache.html  metrics.html  progress.html  scheduler.html  store.html  telemetry.html
_modules/nlp_shap/value/: embedding.html  logprob.html  tfidf.html
_modules/nlp_shap/viz/: render.html  token_bar.html  token_text.html
_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  release_notes.rst.txt
_sources/api/: backends.rst.txt  estimation.rst.txt  masking.rst.txt  plugins.rst.txt  protocols.rst.txt  runtime.rst.txt
_sources/guides/: approximation.rst.txt  backends.rst.txt  config.rst.txt  estimands.rst.txt  exact.rst.txt  extending.rst.txt  getting_started.rst.txt  pipeline.rst.txt  runtime.rst.txt  value_functions.rst.txt  visualization.rst.txt
_sources/notebooks/: attribution_viz.ipynb.txt  estimands_toy_game.ipynb.txt  estimator_comparison.ipynb.txt  exact_estimation.ipynb.txt  masking_views.ipynb.txt  runtime_core.ipynb.txt  text_explain_e2e.ipynb.txt
_sources/theory/: cooperative_games.rst.txt  estimands.rst.txt  exact.rst.txt  value_functions.rst.txt
_static/: custom.css
_static/guide_outputs/: exact_bitmask_iteration.txt  exact_budget_requirement.txt  exact_quick_start.txt  getting_started_explain.txt  getting_started_manifest.txt  masking_absence_policies.txt  masking_partition.txt  masking_plugins.txt  pipeline_quick_start.txt  runtime_archive.txt  runtime_scheduler.txt  value_normalizer.txt
api/: backends.html  domain.html  estimation.html  masking.html  pipeline.html  plugins.html  protocols.html  runtime.html  value.html  viz.html
config/: dev_api.yaml  dev_lmstudio.yaml  dev_transformers.yaml
docs/: .gitignore  Makefile  api.rst  conf.py  examples.rst  index.rst  release_notes.rst
docs/_ext/: guide_outputs.py
docs/_static/: custom.css
docs/_static/guide_outputs/: approximation_monte_carlo.txt  approximation_plugins.txt  config_roundtrip.txt  getting_started_majority.txt  (+3 more)
docs/api/: domain.rst  estimation.rst  pipeline.rst  protocols.rst  runtime.rst  value.rst  viz.rst
docs/guides/: applications.rst  config.rst  estimands.rst  exact.rst  getting_started.rst  masking.rst  pipeline.rst  runtime.rst  value_functions.rst  visualization.rst
docs/scripts/: render_guide_outputs.py
docs/theory/: approximation.rst  cooperative_games.rst  estimands.rst  exact.rst  masking.rst  runtime.rst  shapley_values.rst  value_functions.rst
examples/: README.md  attribution_viz.ipynb  estimands_toy_game.ipynb  estimator_comparison.ipynb  exact_estimation.ipynb  masking_views.ipynb  runtime_core.ipynb  text_explain_e2e.ipynb
guides/: applications.html  approximation.html  backends.html  config.html  estimands.html  exact.html  extending.html  getting_started.html  masking.html  pipeline.html  runtime.html  value_functions.html  visualization.html
notebooks/: attribution_viz.html  estimands_toy_game.html  estimator_comparison.html  exact_estimation.html  masking_views.html  runtime_core.html  text_explain_e2e.html
src/nlp_shap/: __init__.py  _logging.py  errors.py
tests/: conftest.py  test_base_install.py  test_logging.py  test_smoke.py
tests/backends/: test_api.py  test_lmstudio.py  test_lmstudio_chat.py  test_lmstudio_models.py  test_lmstudio_resolve.py  test_mock.py  test_transformers_chat.py  test_transformers_gpu.py  test_transformers_text.py
tests/benchmarks/: _regression.py  baselines.json  conftest.py  test_api_backend_bench.py  test_runtime_archive_bench.py  test_runtime_dedup_bench.py  test_runtime_mask_bench.py  test_runtime_prefix_cache_bench.py  test_smoke_bench.py
tests/domain/: test_coalition.py  test_conversation.py  test_enums.py  test_estimands.py  test_game.py  test_imports.py  test_players.py
tests/estimation/: test_complementary.py  test_exact.py  test_monte_carlo.py  test_neyman.py  test_normalizers.py  test_shared.py
tests/masking/: conftest.py  test_builder.py  test_codec.py  test_partitions.py  test_policies.py  test_space.py
tests/pipeline/: test_config.py  test_manifest.py  test_result.py  test_runner_e2e.py  test_runner_progress.py
tests/plugins/: test_builtin.py  test_registry.py
tests/runtime/: conftest.py  test_archive.py  test_dedup.py  test_kv_cache.py  test_progress.py  test_scheduler.py  test_store.py  test_telemetry.py
tests/signoff/: conftest.py  test_text_mvp_checklist.py
tests/value/: test_embedding.py  test_logprob.py  test_metrics.py  test_tfidf.py
tests/viz/: test_labels.py  test_render.py
theory/: approximation.html  cooperative_games.html  estimands.html  exact.html  masking.html  runtime.html  shapley_values.html  value_functions.html
(+99 files in other folders)
