[project]
name = "nlp-shap"
version = "0.1.0"
description = "Multimodal explainability tool for NLP based on Shapley value."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
  { name = "Paweł Pozorski", email = "pozorski.paul@gmail.com" },
]
maintainers = [
  { name = "Paweł Pozorski", email = "pozorski.paul@gmail.com" },
]

keywords = [
  "explainability",
  "llms",
  "multimodal",
  "nlp",
  "shapley-value",
  "xai",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "logging518>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/Pawlo77/nlp-shap"
Documentation = "https://pawlo77.github.io/nlp-shap/"
Repository = "https://github.com/Pawlo77/nlp-shap"
Issues = "https://github.com/Pawlo77/nlp-shap/issues"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "mypy>=1.16.0",
  "prek>=0.4.9",
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.20",
  "sphinx>=9.1.0",
]

[tool.uv]
required-version = ">=0.11.28"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RUF", "SIM", "T10", "UP"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["nlp_shap"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["logging518", "logging518.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests", "docs/_build", "examples"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
]
markers = [
  "bench: local performance benchmark (run with make bench)",
]

[tool.coverage.run]
source = ["nlp_shap"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.standard]
format = "%(asctime)s %(levelname)s [%(name)s] %(message)s"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
formatter = "standard"
stream = "ext://sys.stderr"

[tool.logging.loggers.nlp_shap]
level = "WARNING"
handlers = ["console"]
propagate = false
