[project]
name = "nlp-shap"
version = "0.1.10"
description = "Multimodal explainability tool for NLP based on Shapley value."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
  { name = "Paweł Pozorski", email = "pozorski.paul@gmail.com" },
]
maintainers = [
  { name = "Paweł Pozorski", email = "pozorski.paul@gmail.com" },
]

keywords = [
  "explainability",
  "llms",
  "multimodal",
  "nlp",
  "shapley-value",
  "xai",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "logging518>=1.0.0,<2.0.0",
    "numpy>=2.0.0,<3.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/Pawlo77/nlp-shap"
Documentation = "https://pawlo77.github.io/nlp-shap/"
Repository = "https://github.com/Pawlo77/nlp-shap"
Issues = "https://github.com/Pawlo77/nlp-shap/issues"

[project.entry-points."nlp_shap.estimators"]
exact = "nlp_shap.estimation.exact:ExactEstimator"
mc = "nlp_shap.estimation.monte_carlo:MonteCarloEstimator"
complementary = "nlp_shap.estimation.complementary:ComplementaryEstimator"
neyman_cc = "nlp_shap.estimation.neyman:NeymanEstimator"

[project.entry-points."nlp_shap.estimands"]
shapley = "nlp_shap.estimation.estimands.shapley:ShapleyAggregator"
banzhaf = "nlp_shap.estimation.estimands.banzhaf:BanzhafAggregator"

[project.entry-points."nlp_shap.partitions"]
tokens = "nlp_shap.masking.partitions:TokenPartitioner"

[project.entry-points."nlp_shap.absence_policies"]
delete = "nlp_shap.masking.policies:DeletePolicy"
pad = "nlp_shap.masking.policies:PadPolicy"
neutral = "nlp_shap.masking.policies:NeutralPolicy"

[project.entry-points."nlp_shap.value_fns"]
tfidf_cosine = "nlp_shap.value.tfidf:TfIdfCosineValue"
embedding_cosine = "nlp_shap.value.embedding:CosineEmbeddingValue"
embedding_euclidean = "nlp_shap.value.embedding:EuclideanEmbeddingValue"
logprob = "nlp_shap.value.logprob:LogprobValue"

[project.entry-points."nlp_shap.normalizers"]
identity = "nlp_shap.estimation.normalizers:IdentityNormalizer"
abs_sum = "nlp_shap.estimation.normalizers:AbsSumNormalizer"
power_shift = "nlp_shap.estimation.normalizers:PowerShiftNormalizer"
min_max = "nlp_shap.estimation.normalizers:MinMaxNormalizer"

[project.entry-points."nlp_shap.backends"]
mock = "nlp_shap.backends.mock:MockBackend"
lmstudio = "nlp_shap.backends.lmstudio:LmStudioBackend"

[project.optional-dependencies]
lmstudio = [
    "lmstudio>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "ipykernel>=7.3.0",
  "mypy>=1.16.0",
  "nbconvert>=7.17.1",
  "prek>=0.4.9",
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.20",
  "furo>=2024.8.6",
  "myst-nb>=1.3.0",
  "sphinx>=9.1.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "types-pyyaml>=6.0.12.20250915",
  "scikit-learn>=1.7.0",
]

[tool.uv]
required-version = ">=0.11.28"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RUF", "SIM", "T10", "UP"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["nlp_shap"]
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["logging518", "logging518.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lmstudio", "lmstudio.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests", "docs/_build", "examples"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
]
markers = [
  "bench: local performance benchmark (run with make bench)",
  "lms: LM Studio integration test (requires local LM Studio with qwen2-500m-instruct)",
]

[tool.coverage.run]
source = ["nlp_shap"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.standard]
format = "%(asctime)s %(levelname)s [%(name)s] %(message)s"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
formatter = "standard"
stream = "ext://sys.stderr"

[tool.logging.loggers.nlp_shap]
level = "WARNING"
handlers = ["console"]
propagate = false
